# busse-shopfloor-govee-api

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
